--- a/languages/en.lang
+++ b/languages/en.lang
@@ -89,8 +89,8 @@ handlerCheckData.cantCreateThread=𝙶𝚁𝙾𝚄𝙿𝚂 𝚆𝙸𝚃𝙷 𝙸
 handlerCheckData.cantCreateUser=𝚄𝚂𝙴𝚁 𝚆𝙸𝚃𝙷 𝙸𝙳 '%1'  𝙲𝙰𝙽𝙽𝙾𝚃 𝙱𝙴 𝚆𝚁𝙸𝚃𝚃𝙴𝙽 𝚃𝙾 𝚃𝙷𝙴 BÄŸĴÏĐ 𝙳𝙰𝚃𝙰𝙱𝙰𝚂𝙴!
 
 # bot/handler/handlerEvents.js
-handlerEvents.userBanned= ⚠️ ||⇨ 𝐘𝐨𝐮 𝐡𝐚𝐯𝐞 𝐛𝐚𝐧𝐧𝐞𝐝 𝐅𝐫𝐨𝐦 𝐭𝐡𝐢𝐬 𝐬𝐞𝐫𝐯𝐞𝐫 𝐩𝐥𝐞𝐚𝐬𝐞 𝐜𝐨𝐧𝐭𝐚𝐜𝐭 𝐚𝐝𝐦𝐢𝐧 𝐈 𝐦𝐞𝐚𝐧 𝐀𝐲𝐚𝐚𝐧 \n☞︎︎︎ 𝐑𝐞𝐚𝐬𝐨𝐧: %1\n☞︎︎︎  𝐓𝐢𝐦𝐞: %2\n☞︎︎︎ 𝐔𝐬𝐞𝐫 𝐈𝐝: %3
-handlerEvents.threadBanned= ⚠️ ||⇨ 𝐓𝐡𝐢𝐬 𝐠𝐫𝐨𝐮𝐩 𝐛𝐚𝐧𝐧𝐞𝐝 𝐟𝐫𝐨𝐦 𝐒𝐩𝐈𝐝𝐞𝐘 \n☞︎︎︎ 𝐑𝐞𝐚𝐬𝐨𝐧: %1\n☞︎︎︎ 𝐓𝐢𝐦𝐞: %2\n☞︎︎︎ 𝐓𝐡𝐫𝐞𝐚𝐝 𝐢𝐝: %3
+handlerEvents.userBanned= ⚠️ ||⇨ 𝐘𝐨𝐮 𝐡𝐚𝐯𝐞 𝐛𝐚𝐧𝐧𝐞𝐝 𝐅𝐫𝐨𝐦 𝐭𝐡𝐢𝐬 𝐬𝐞𝐫𝐯𝐞𝐫 𝐩𝐥𝐞𝐚𝐬𝐞 𝐜𝐨𝐧𝐭𝐚𝐜𝐭 𝐚𝐝𝐦𝐢𝐧 𝐈 𝐦𝐞𝐚𝐧 𝐀𝐫𝐢𝐲𝐚𝐧 \n☞︎︎︎ 𝐑𝐞𝐚𝐬𝐨𝐧: %1\n☞︎︎︎  𝐓𝐢𝐦𝐞: %2\n☞︎︎︎ 𝐔𝐬𝐞𝐫 𝐈𝐝: %3
+handlerEvents.threadBanned= ⚠️ ||⇨ 𝐓𝐡𝐢𝐬 𝐠𝐫𝐨𝐮𝐩 𝐛𝐚𝐧𝐧𝐞𝐝 𝐟𝐫𝐨𝐦 𝐤𝐚𝐤𝐚𝐫𝐨𝐭\n☞︎︎︎ 𝐑𝐞𝐚𝐬𝐨𝐧: %1\n☞︎︎︎ 𝐓𝐢𝐦𝐞: %2\n☞︎︎︎ 𝐓𝐡𝐫𝐞𝐚𝐝 𝐢𝐝: %3
 handlerEvents.onlyAdminBox= ⚠️ ||⇨𝐓𝐡𝐢𝐬 𝐠𝐫𝐨𝐮𝐩 𝐢𝐬 𝐨𝐧 𝐚𝐝𝐦𝐢𝐧 𝐦𝐨𝐝𝐞 𝐧𝐨𝐰
 handlerEvents.onlyAdminBot=⚠️ ||⇨ 𝐜𝐮𝐫𝐫𝐞𝐧𝐭𝐥𝐲 𝐨𝐧𝐥𝐲 𝐚𝐝𝐦𝐢𝐧 𝐜𝐚𝐧 𝐮𝐬𝐞 𝐭𝐡𝐢𝐬 𝐛𝐨𝐭
 handlerEvents.commandNotFound= ⚠️ ||⇨ 𝐝𝐨𝐞𝐬 𝐧𝐨𝐭 𝐞𝐱𝐢𝐱𝐭 𝐭𝐡𝐢𝐬 "%1" 𝐂𝐨𝐦𝐦𝐚𝐧𝐝
